@@ -20,7 +20,7 @@ Stack trace:
 #1 %s(20): {closure}()
 #2 {main}
   thrown in eval()'d code on line 1
-prompt> Uncaught Error in %s on line 16
+prompt> [Uncaught Error in %s on line 16]
 Error: Call to undefined function foo() in %s:16
 Stack trace:
 #0 %s(20): {closure}()
